# Selfie-Robot

./: README.md
code/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  data_structures.h  main.cpp  test_individual.cpp
code/GUI/: CMakeLists.txt  GUI.cpp  GUI.h  Makefile  cmake_install.cmake
code/end_effector/: CMakeLists.txt  Makefile  cmake_install.cmake  end_effector.cpp  end_effector.h
code/line_detection/: CMakeLists.txt  Makefile  cmake_install.cmake  line_detection.cpp  line_detection.h
code/motion_planner/: CMakeLists.txt  Makefile  cmake_install.cmake  motion_planner.cpp  motion_planner.h
code/stroke_planner/: CMakeLists.txt  Makefile  cmake_install.cmake  stroke_planner.cpp  stroke_planner.h
research/: README.md  research
